fix: readme e nomenclatura de endpoints
